--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
     </div>
   </div>
-  <!-- <script src="app.js"></script> -->
+  <script src="app.js"></script>
   <script src="app2.js"></script>
 </body>
 </html>
