updated carrito width

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- carrito  de compras -->
     <div id="mercado" class="my-10 flex items-center justify-center flex-wrap"></div>
 
-    <section id="carrito-section" class="mb-10 mx-5">
-      <ul id="carrito" class="block flex-nowrap "></ul>
+    <section id="carrito-section" class="mb-10 flex justify-center">
+      <ul id="carrito" class="block flex-nowrap w-1/3"></ul>
     </section>
     
     <template id="frutas-template">
