margin updated in carrito

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="mercado" class="my-10 flex items-center justify-center flex-wrap"></div>
 
     <section id="carrito-section" class="mb-10 flex justify-center">
-      <ul id="carrito" class="block flex-nowrap w-full sm:w-1/2 lg:w-1/3"></ul>
+      <ul id="carrito" class="block flex-nowrap w-full sm:w-1/2 lg:w-1/3 mx-3 lg:mx-5"></ul>
     </section>
     
     <template id="frutas-template">
